--- a/src/components/Select/Select.css
+++ b/src/components/Select/Select.css
@@ -1,9 +1,3 @@
-.MuiInputBase-root {
-  background-color: #2e2e2e;
-}
-.MuiInputBase-root .MuiOutlinedInput-notchedOutline {
-  border-color: #525252;
-}
-.MuiInputBase-root .MuiAutocomplete-endAdornment svg path {
-  fill: #525252;
+.select__multi-value {
+  display: none !important;
 }
